# edgeService

./: .gitignore  README.md  Untitled Diagram.drawio
edgeLibrary/: CMakeLists.txt  Readme.md  build.sh  test.cpp
edgeLibrary/ExternalLibs/Modules/: Findlibcrypto++.cmake
edgeLibrary/src/hmac/: hmacmanager.cpp  hmacmanager.hpp
edgeLibrary/src/restmanager/: restmanager.cpp  restmanager.hpp
edgeLibrary/test/hmac/: hmac_test.cpp
edgeLibrary/test/restmanager/: restmanager_test.cpp
pythonTestService/: .gitignore  Readme.MD  app.py
